@@ -1,27 +1,24 @@
 package au.org.aodn.nrmn.restapi.validation.process;
 
+import au.org.aodn.nrmn.restapi.dto.stage.RowErrors;
+import au.org.aodn.nrmn.restapi.dto.stage.ValidationResponse;
 import au.org.aodn.nrmn.restapi.model.db.StagedJob;
-import au.org.aodn.nrmn.restapi.model.db.StagedRowError;
-import au.org.aodn.nrmn.restapi.model.db.composedID.ErrorID;
-import au.org.aodn.nrmn.restapi.model.db.enums.ValidationCategory;
+import au.org.aodn.nrmn.restapi.model.db.StagedRow;
 import au.org.aodn.nrmn.restapi.repository.StagedJobRepository;
 import au.org.aodn.nrmn.restapi.repository.StagedRowErrorRepository;
 import au.org.aodn.nrmn.restapi.repository.StagedRowRepository;
 import au.org.aodn.nrmn.restapi.util.ValidatorHelpers;
-import com.oath.cyclops.hkt.DataWitness;
+import au.org.aodn.nrmn.restapi.validation.model.MonoidRowValidation;
+import au.org.aodn.nrmn.restapi.validation.summary.DefaultSummary;
 import cyclops.companion.Monoids;
-import cyclops.control.Future;
-import cyclops.control.Validated;
 import cyclops.data.Seq;
 import cyclops.data.tuple.Tuple2;
 import lombok.val;
-import org.apache.poi.ss.usermodel.DataValidationConstraint;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class ValidationProcess extends ValidatorHelpers {
@@ -44,44 +41,60 @@ public class ValidationProcess extends ValidatorHelpers {
     @Autowired
     RawValidation preProcess;
 
+    @Autowired
+    DefaultSummary summary;
 
-    public List<StagedRowError> process(StagedJob job) {
-        val stagedRows = rowRepo.findRowsByReference(job.getReference());
+    public ValidationResponse process(StagedJob job) {
         val rawValidators = preProcess.getRawValidators(job);
-        val preCheck =
-                stagedRows.stream()
-                        .map(row -> preProcess.validate(row, rawValidators).bimap(err -> err, Seq::of))
+        val reducer = new MonoidRowValidation<Seq<Tuple2<String, Object>>>(Seq.empty(), Monoids.<Tuple2<String, Object>>seqConcat());
+        val rowChecks =
+                job.getRows().stream()
+                        .map(row -> preProcess.validate(row, rawValidators))
+                        .collect(Collectors.toList());
+        val preCheck = rowChecks.stream().reduce(reducer.zero(), reducer::apply);
 
-                        .reduce(
-                                Validated.valid(Seq.empty()),
-                                (v1, v2) -> v1.combine(Monoids.seqConcat(), v2));
-        if (preCheck.isInvalid()) {
-            return toErrorList(preCheck);
+        if (preCheck.getValid().isInvalid()) {
+            return rowsWithErrorsResponse(job, preCheck.getRows());
         }
 
-        val rowValidations = preCheck.orElseGet(Seq::empty);
+        val rowWithHasMap = rowChecks
+                .stream()
+                .flatMap(
+                        withValidation -> withValidation.getValid()
+                                .map(seq -> seq.toHashMap(Tuple2::_1, Tuple2::_2)).stream())
+                .collect(Collectors.toList());
 
-        val rowValidationHMap =
-                rowValidations.map(seq -> seq.toHashMap(Tuple2::_1, Tuple2::_2));
 
-        val formattedRows = rowValidationHMap.map(preProcess::toFormat).toList();
+        val formattedRows = rowWithHasMap.stream().map(preProcess::toFormat).collect(Collectors.toList());
 
-        val futureFormattedResult = Future.of(() -> postProcess.process(formattedRows, job));
-        val futureGlobalResult = Future.of(() -> globalProcess.process(job));
+        val formattedResult = postProcess.process(formattedRows, job);
+        
+        if (formattedResult.getValid().isInvalid()) {
+            return rowsWithErrorsResponse(job, formattedResult.getRows());
+        }
+        
+        val globalResult = globalProcess.process(job);
+        return new ValidationResponse(
+                job,
+                Collections.emptyList(),
+                Collections.emptyMap(),
+                toErrorList(globalResult),
+                Collections.emptyList());
+    }
 
-        val combineResult = futureFormattedResult
-                .zip(futureGlobalResult, (v1, v2) -> v1.combine(Monoids.stringConcat, v2));
-        return combineResult.fold(
-                this::toErrorList,
-                err -> Collections.singletonList(
-                        new StagedRowError(
-                                new ErrorID(
-                                        null,
-                                        job.getId(),
-                                        err.getMessage()),
-                                ValidationCategory.RUNTIME,
-                                "Process",
-                                null
-                        )));
+    private ValidationResponse rowsWithErrorsResponse(StagedJob job, Seq<StagedRow> rows) {
+        val errors =
+                rows
+                        .flatMap(row ->
+                                Seq.fromIterable(row.getErrors())
+                        ).toList();
+
+        val msgSummary = summary.aggregate(errors);
+        return new ValidationResponse(
+                job,
+                rows.map(row -> new RowErrors(row.getId(),row.getErrors())).toList(),
+                msgSummary,
+                Collections.emptyList(),
+                Collections.emptyList());
     }
 }
